# ultimate_rust

./: .gitignore  CLAUDE.md  CODEBUDDY.md  Cargo.toml  NOTES.md  WARP.md
approx_demo/: Cargo.toml
approx_demo/src/: main.rs
authentication/: Cargo.toml
authentication/src/: lib.rs
best/: Cargo.toml
best/src/: main.rs
blocking/: Cargo.toml
blocking/src/: main.rs
buffer_read/: Cargo.toml
buffer_read/src/: main.rs
bytes/: Cargo.toml  README.md
bytes/src/: main.rs
channels1/src/: main.rs
collector/: Cargo.toml  README.md  build.md
collector/.claude/: settings.local.json
collector/src/: main.rs
constructor/: Cargo.toml
constructor/src/: main.rs
cpu_affinity/: Cargo.toml
cpu_affinity/src/: main.rs
cursive_demo/: Cargo.toml
cursive_demo/src/: main.rs
cycles/: Cargo.toml  README.md
cycles/src/: main.rs
dashing/: Cargo.toml
dashing/src/: main.rs
deadlocks/src/: main.rs
divide_work/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
favor_iterators/: Cargo.toml
favor_iterators/src/: main.rs
file_adapt/: Cargo.toml  LEARNING_RESOURCES.md  LICENSE  README.md
file_adapt/.claude/: settings.local.json
file_adapt/src/: main.rs
file_read/: Cargo.toml
file_read/src/: main.rs
fileio/: Cargo.toml
fileio/src/: main.rs
footgun/: WARP.md
footgun/src/: main.rs
footgun_fixed/: Cargo.toml  WARP.md
footgun_fixed/src/: main.rs
footgun_manual/: Cargo.toml  Makefile  README.md  WARP.md
footgun_manual/src/: main.rs  main_optimized.rs
generics/: README.md
generics/src/: advanced_generics.rs  main.rs
hello_async/src/: main.rs
hello_tokio/: Cargo.toml  README.md
hello_tokio/src/: main.rs  main_performance.rs
iterators/: Cargo.toml  README.md
iterators/src/: main.rs
lifetimes/: Cargo.toml
lifetimes/.claude/: settings.local.json
lifetimes/src/: lifetime_errors.rs  main.rs
login/: Cargo.toml
login/src/: main.rs
login_manager/: Cargo.toml  users.json
login_manager/src/: main.rs
logspan/: Cargo.toml
logspan/src/: main.rs
memmap_read/: Cargo.toml
memmap_read/src/: main.rs
memory/: Cargo.toml  README.md
memory/.claude/: settings.local.json
memory/src/: advanced_memory.rs  main.rs
memory_fragmentation/: Cargo.toml  README.md
memory_fragmentation/src/: main.rs
mutex_demo/: Cargo.toml
mutex_demo/src/: main.rs
my_thread/: Cargo.toml
my_thread/src/: main.rs
packing/: Cargo.toml  README.md
packing/src/: main.rs
parking/src/: main.rs
pin_demo/: Cargo.toml
pin_demo/src/: main.rs
rayon_iters/: Cargo.toml
rayon_iters/src/: main.rs
rayon_scopes/: Cargo.toml
rayon_scopes/src/: main.rs
read_write_lock_demo/: Cargo.toml
read_write_lock_demo/src/: main.rs
recursion/: Cargo.toml  README.md
recursion/.claude/: settings.local.json
recursion/src/: main.rs  pin_examples.rs
ref_count/: Cargo.toml
ref_count/.claude/: settings.local.json
ref_count/src/: main.rs
restclient/: Cargo.toml
restclient/src/: main.rs
scoped_thread/: Cargo.toml
scoped_thread/src/: main.rs
server/: Cargo.toml  README.md
server/.claude/: settings.local.json
server/migrations/: 20251012074537_initial.sql
server/src/: collector.rs  main.rs
shared_data/: Cargo.toml  README.md
shared_data/src/: lib.rs  main.rs
tcpserver/: Cargo.toml
tcpserver/src/: main.rs
thread_proi/: Cargo.toml
thread_proi/src/: main.rs
threadpool_workers/: Cargo.toml
threadpool_workers/src/: main.rs
threads_demo/: Cargo.toml
threads_demo/src/: main.rs
thumbs/: Cargo.toml  README.md
thumbs/.claude/: settings.local.json
thumbs/migrations/: 20250928151328_initial.sql
thumbs/src/: index.html  main.rs
tokio_channels/: Cargo.toml
tokio_channels/src/: main.rs
tokio_console_demo/: Cargo.toml
tokio_console_demo/src/: main.rs
tokio_db/: .env  Cargo.toml
tokio_db/migrations/: 20250927075305_initial.sql  20250927082557_more_messages.sql
tokio_db/src/: main.rs
tokio_pending/: Cargo.toml
tokio_select/: Cargo.toml
tokio_select/src/: main.rs
tokio_share_state/: Cargo.toml
tokio_share_state/src/: main.rs
tokio_tcpclient/: Cargo.toml
tokio_tcpclient/src/: main.rs
tokio_test/: Cargo.toml
tokio_test/src/: main.rs
tokio_web_service/: Cargo.toml
tokio_web_service/src/: main.rs
traits/: README.md
traits/.claude/: settings.local.json
traits/src/: advanced_traits.rs  main.rs
unsafe_demo/: Cargo.toml  README.md
unsafe_demo/src/: main.rs
variables/src/: main.rs
work_queue/: Cargo.toml
work_queue/src/: main.rs
