[package]
name = "ultimate_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [ "authentication",
    "hello_world",
    "variables",
    "authentication",
    "login" ,
    "login_manager"
, "threads_demo", "divide_work", "my_thread", "scoped_thread", "footgun", "footgun_fixed", "footgun_manual", "mutex_demo"]
