[package]
name = "bytes"
version = "0.1.0"
edition = "2021"
authors = ["Rust学习者"]
description = "Rust 字节操作和零拷贝深入学习示例"
license = "MIT"
repository = "https://github.com/example/rust-bytes"

[dependencies]
# 零拷贝字节操作
bytemuck = { version = "1.24.0", features = ["derive"] }
# 高性能字节缓冲区
bytes = "1.9"
# 字节数组辅助宏
byteorder = "1.5"
# 安全的跨类型转换
safe-transmute = "0.11"
# 十六进制编码/解码
hex = "0.4"
# Base64 编码/解码
base64 = "0.22"
# 序列化支持
serde = { version = "1.0", features = ["derive"] }
# JSON 序列化
serde_json = "1.0"
# 二进制序列化
bincode = "1.3"
# 错误处理
anyhow = "1.0"
# 异步运行时（用于异步字节操作示例）
tokio = { version = "1.0", features = ["full"] }
# 网络编程
tokio-util = { version = "0.7", features = ["codec"] }
