[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_data = { path = "../shared_data" }
anyhow = "1.0.100"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = "1.18.1"
dotenv = "0.15.0"
axum = "0.8.6"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
