[package]
name = "tokio_db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.227", features = ["derive"] }
sql-cli = "1.54.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
